<resources>
    <string name="app_name">Bitcoin Converter</string>

    <string name="currency">Currency</string>

    <string name="unit_usd">USD</string>
    <string name="unit_isk">ISK</string>
    <string name="unit_hkd">HKD</string>
    <string name="unit_twd">TWD</string>
    <string name="unit_chf">CHF</string>
    <string name="unit_eur">EUR</string>
    <string name="unit_dkk">DKK</string>
    <string name="unit_clp">CLP</string>
    <string name="unit_cad">CAD</string>
    <string name="unit_cny">CNY</string>
    <string name="unit_thb">THB</string>
    <string name="unit_aud">AUD</string>
    <string name="unit_sgd">SGD</string>
    <string name="unit_krw">KRW</string>
    <string name="unit_jpy">JPY</string>
    <string name="unit_pln">PLN</string>
    <string name="unit_gbp">GBP</string>
    <string name="unit_sek">SEK</string>
    <string name="unit_nzd">NZD</string>
    <string name="unit_brl">BRL</string>
    <string name="unit_rub">RUB</string>

    <string name="unit_btc">BTC</string>
    <string name="symbol_btc">฿</string>

    <string name="symbol_usd">$</string>
    <string name="no_connection_message">I\'m sorry, but I need you to connect to the internet so you can get current conversion rates :)</string>
    <string name="refresh_btn">REFRESH</string>
    <string name="input_hint">Enter value</string>

</resources>
